added config compiler, hotkey register works

--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,11 @@
 file=config.comp
 
 [bind-increment-kills]
-key=ALT,b
-file=kills.txtabcdef
+key=ALT,B
+file=kills.txt
 action=INC
 
 [bind-decrement-kills]
-key=ALT,g
-file=kills.txtabcdef
+key=ALT,G
+file=kills.txt
 action=DEC
